# jidao-emu8051

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
include/: emu8051.h
src/: core.c  core.cpp  disasm.c  disasm.cpp  emu.cpp  main.cpp  opcodes.c  opcodes.cpp
